--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,10 @@ sudo: false
 language: go
 
 go:
-    - 1.2
-    - 1.3
-    - 1.4
-    - 1.5
-    - tip
+  - 1.7
 
-matrix:
-    allow_failures:
-        - go: tip
+branches:
+  only:
+    - master
+
+script: make test test-race
